--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Pacifico&family=Poppins:wght@500;600;700&display=swap');
 
 $greenColor: #97be10;
 $orangeColor: #ffb400;
+$grayColor: #484848;
+$padding15: 15px;
+$bgColor: #f1f1f1;
 
 @mixin buttonStyle {
   border-radius: 25px;
   background-color: $greenColor;
-  padding: 12px;
+  padding: 12px 18px;
   border: none;
   color: white;
   font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+}
+
+@mixin noneSelector {
+  -moz-user-select: none;
+  -website-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
+}
+
+@mixin listStyle {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  cursor: pointer;
 }
 
 html,
 body,
 #root,
-.app {
+.app,
+#id {
   height: 100%;
 }
 
@@ -24,15 +43,67 @@ body,
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+
+  @include noneSelector;
+}
+
+a {
+  text-decoration: none;
+}
+
+#root {
+  background-color: $bgColor;
 }
 
 .app {
-  color: white;
-  background-color: $orangeColor;
-  height: 100%;
   width: 1024px;
   margin: 0 auto;
+  background-color: white;
+}
+
+nav {
+  width: 20%;
+  height: 100%;
+  padding: $padding15;
+  padding-right: 0;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-right: 2px solid $bgColor;
+  color: $grayColor;
+
+  h1 {
+    padding: $padding15;
+    font-family: 'Pacifico', cursive;
+    font-size: 35px;
+    transform: rotate(-10deg);
+  }
+
+  ul {
+    @include listStyle;
+  }
+
+  li {
+    padding: $padding15;
+    font-weight: 700;
+  }
+
+  li:hover {
+    background-color: $greenColor;
+    color: white;
+  }
+
+  #icon {
+    padding: $padding15;
+  }
+}
+
+#login {
+  color: white;
+  background-color: $orangeColor;
+  display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
