--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,11 @@
 
 $greenColor: #97be10;
 $orangeColor: #ffb400;
-$grayColor: #484848;
+$grayColor: #393939;
 $padding15: 15px;
+$lightGray: #bbb;
 $bgColor: #f1f1f1;
+$mainGray: #141414;
 
 @mixin buttonStyle {
   border-radius: 25px;
@@ -50,6 +52,7 @@ body,
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 #root {
@@ -60,6 +63,7 @@ a {
   width: 1024px;
   margin: 0 auto;
   background-color: white;
+  display: flex;
 }
 
 nav {
@@ -82,6 +86,8 @@ nav {
 
   ul {
     @include listStyle;
+
+    margin-top: -120px;
   }
 
   li {
@@ -96,6 +102,24 @@ nav {
 
   #icon {
     padding: $padding15;
+  }
+}
+
+.movieMenu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 150px 0;
+  width: 100%;
+  color: $mainGray;
+
+  h1 {
+    letter-spacing: 5px;
+    font-weight: 700;
+  }
+
+  span {
+    color: $lightGray;
   }
 }
 
