--- a/src/index.scss
+++ b/src/index.scss
@@ -110,6 +110,14 @@ nav {
 
   #icon {
     padding: $padding15;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  #copyright {
+    padding: $padding15;
+    font-size: 10px;
   }
 }
 
@@ -117,6 +125,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 20%;
 
   h3 {
     padding: $padding15;
@@ -271,12 +280,23 @@ nav {
       background-color: $bgColor;
     }
 
+    input {
+      padding: 5px;
+      border: 1px solid  $bgColor;
+      background-color: $bgColor;
+      font-size: 12px;
+    }
+
     button {
       @include buttonStyle;
 
-      align-self: flex-end;
       margin-top: 50px;
     }
+  }
+
+  #payingDetail :nth-child(7) {
+    margin: 10px 0;
+    font-size: 12px;
   }
 
   #payingDetail div:first-child {
@@ -308,11 +328,12 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   color: white;
+  padding: 20px;
 
   h1 {
     letter-spacing: 5px;
+    margin-top: 5rem;
   }
 
   button {
@@ -320,5 +341,27 @@ nav {
 
     background-color: white;
     color: $greenColor;
+  }
+
+  div {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    margin-top: 3rem;
+
+    select {
+      width: 200px;
+      border: 1px solid $bgColor;
+      background-color: $greenColor;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      background-image: linear-gradient(45deg, transparent 50%, #c7c7c7 0), linear-gradient(135deg, #c7c7c7 50%, transparent 0), linear-gradient(90deg, #ccc, #ccc);
+      background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+      background-size: 5px 5px, 5px 5px, 0;
+      background-repeat: no-repeat;
+      padding: 0 10px;
+      border-radius: 25px;
+      color: white;
+    }
   }
 }
