--- a/src/index.scss
+++ b/src/index.scss
@@ -313,8 +313,23 @@ nav {
     }
   }
 
-  #payingDetail :nth-child(7) {
+  #payingDetail :nth-child(7),
+  #payingDetail :nth-child(9) {
     margin: 10px 0;
+    font-size: 12px;
+  }
+
+  select {
+    border: 1px solid $bgColor;
+    background-color: $bgColor;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: linear-gradient(45deg, transparent 50%, #c7c7c7 0), linear-gradient(135deg, #c7c7c7 50%, transparent 0), linear-gradient(90deg, #ccc, #ccc);
+    background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+    background-size: 5px 5px, 5px 5px, 0;
+    background-repeat: no-repeat;
+    padding: 5px;
+    color: $grayColor;
     font-size: 12px;
   }
 
@@ -339,48 +354,30 @@ nav {
   }
 }
 
-#appointment {
-  width: inherit;
-  position: absolute;
-  background-color: $greenColor;
-  height: 100%;
+#tickets {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
-  padding: 20px;
+  padding: 150px 0;
+  width: 100%;
+  color: #141414;
+}
 
-  h1 {
-    letter-spacing: 5px;
-    margin-top: 5rem;
+#noTickets {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 120px 0;
+  width: 100%;
+  color: #141414;
+  justify-content: space-around;
+
+  img {
+    height: 70%;
   }
 
-  button {
-    @include buttonStyle;
-
-    background-color: white;
+  a {
     color: $greenColor;
-  }
-
-  div {
-    display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    margin-top: 3rem;
-
-    select {
-      width: 200px;
-      border: 1px solid $bgColor;
-      background-color: $greenColor;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      background-image: linear-gradient(45deg, transparent 50%, #c7c7c7 0), linear-gradient(135deg, #c7c7c7 50%, transparent 0), linear-gradient(90deg, #ccc, #ccc);
-      background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
-      background-size: 5px 5px, 5px 5px, 0;
-      background-repeat: no-repeat;
-      padding: 0 10px;
-      border-radius: 25px;
-      color: white;
-    }
+    font-weight: 500;
   }
 }
