--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,11 @@ a {
   color: inherit;
 }
 
+a:hover,
+button {
+  cursor: pointer;
+}
+
 #root {
   background-color: $bgColor;
 }
@@ -104,8 +109,8 @@ nav {
   }
 
   li:hover {
-    background-color: $greenColor;
-    color: white;
+    background-color: $greenColor !important;
+    color: white !important;
   }
 
   #icon {
@@ -115,9 +120,29 @@ nav {
     align-items: center;
   }
 
-  #copyright {
-    padding: $padding15;
+  span {
     font-size: 10px;
+    padding-top: 30px;
+  }
+
+  button {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+  }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    padding: $padding15;
+
+    a {
+      display: flex;
+      font-size: 14px;
+      align-items: center;
+    }
   }
 }
 
@@ -187,23 +212,32 @@ nav {
   button {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 100%;
 
     @include buttonStyle;
+  }
+
+  a {
+    width: 30%;
   }
 
   input {
     border: none;
     background-color: transparent;
-    border-bottom: 1px solid $bgColor;
     color: white;
     font-size: 15px;
-    padding: 5px;
+    width: 70%;
+    border-right: 1px solid white;
+    padding: 0 25px;
   }
 
   div {
     display: flex;
     justify-content: space-evenly;
     width: 50%;
+    background-color: $greenColor;
+    border-radius: 25px;
   }
 }
 
@@ -273,6 +307,12 @@ nav {
     img {
       width: 70%;
     }
+  }
+
+  button {
+    background-color: transparent;
+    border: none;
+    color: white;
   }
 
   #payingDetail {
@@ -358,22 +398,76 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 150px 0;
+  padding: 80px 0;
   width: 100%;
   color: #141414;
+
+  h3 {
+    font-size: 15px;
+  }
+
+  h1 {
+    letter-spacing: 5px;
+    font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    margin-bottom: 10px;
+  }
+
+  #items {
+    width: inherit;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 10px;
+    overflow-x: scroll;
+  }
+
+  .ticket {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 30%;
+    margin: 12px;
+
+    div:first-child {
+      display: flex;
+      height: 180px;
+      flex-direction: column;
+      justify-content: space-between;
+      border: 1px solid $lightGray;
+      border-bottom: none;
+      padding: 20px 20px 40px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+
+    div:nth-child(2) {
+      width: 100%;
+      border-top: 4px dotted $lightGray !important;
+      border: 1px solid $lightGray;
+      text-align: center;
+    }
+
+    img {
+      width: 60%;
+    }
+
+    span {
+      font-size: 14px;
+    }
+  }
 }
 
 #noTickets {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 120px 0;
+  padding: 80px 0;
   width: 100%;
   color: #141414;
   justify-content: space-around;
 
   img {
-    height: 70%;
+    height: 50%;
   }
 
   a {
